# Hexacopter

./: README.md
MATLAB-SCRIPTS/: 4DOF_Robotarm.mlx  RRT.m
MATLAB-SCRIPTS/ROBOTIKK/: GENERATOR.mlx  QuadQopterConfig.mat  UAVFidelityExample.mlx  UAV_LIDAR_SCENARIO.mlx  asbQuadcopter.slx  flightData.mat  m_localization_landmark.m
my_hexacopter/: CMD_COPY.txt  package.xml  setup.cfg  setup.py
my_hexacopter/config/: controller_config.yaml
my_hexacopter/launch/: my_hexacopter.launch.py
my_hexacopter/my_hexacopter/: my_hexacopter.py
my_hexacopter/urdf/: gazebo_control.xacro  my_hexacopter_simple.xacro  robot_arm.xacro  sensors.xacro
my_hexacopter/worlds/: ball  drone_world.world
