<?xml version="1.0"?>
<package format="3">
  <name>my_hexacopter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rocotics@todo.todo">rocotics</maintainer>
  <license>TODO: License declaration</license>

  <!-- Buildtool Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>xacro</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>ros2_controllers</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros2_control</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_state_broadcaster</build_depend>

  <!-- Execution Dependencies -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
